# aot

./: .gitmodules
.github/workflows/: build-windows-x64.yml
Source/dicts/Bigrams/: BigramsReader.cpp
Source/dicts/Bigrams/Text2Bigrams/: Text2Bigrams.cpp
Source/synan/SimpleGrammarLib/: CMakeLists.txt
Source/synan/SynCommonLib/: CMakeLists.txt
